# litex_xtrx

./: .gitmodules  LICENSE  LimeSDR_XTRX_platform.py  README.md  README_reboot.md  fairwaves_xtrx.py  fairwaves_xtrx_platform.py  litex_xtrx.py
app/gnuradio/: external_signal_generator.grc  fm_receiver2.grc  xtrx_fm_receiver.grc  xtrx_testRXTX.grc  xtrx_testTX.grc  xtrx_testTX_file_source_dual_channel.grc
app/limesuite_patches/limesuite/: 0001-limesuite-disable_cuda_library.patch
app/python/: MeasureDelay.py  rms_test.py  tone_rxtx.py  xtrx_tx.py
firmware/: Makefile  isr.c  main.c
gateware/: aux.py  gpio.py  gps.py  lms7002m.py  rf_switches.py  synchro.py  vctcxo.py
gnuradio/: README.md  plotFileSinkBin.m  xtrx_fm_receiver.grc  xtrx_testRX.grc  xtrx_testRX.m  xtrx_testRX_gui.grc  xtrx_testRX_gui_dual_channel.grc  xtrx_testTX.grc  xtrx_testTX_file_source.grc
software/: __init__.py  build_driver.py
software/kernel/: Makefile  csr.h  mem.h  soc.h
software/litepcie-kernel-module/: csr.h  main.c
software/litepcie/kernel/: Makefile  csr.h  mem.h
software/litepcie/user/: Makefile
software/lms7002m/: CMakeLists.txt
software/lms7002m/include/lms7002mNG/: DeviceRegistry.h  RFSOCDescriptor.h  SDRConfig.h  SDRDevice.cpp  SDRDevice.h  VersionInfo.h  VersionInfo.in.cpp  config.h  limesuiteng.hpp
software/lms7002m/src/: MCU_BD.cpp  MCU_BD.h  mcu_programs.h
software/lms7002m/src/logger/: Logger.cpp  LoggerCString.cpp  LoggerInternal.h
software/lms7002m/src/utilities/: CMakeLists.txt  pll_sweep.cpp
software/lms7002mNG/: CMakeLists.txt
software/lms7002mNG/include/: IComms.h
software/lms7002mNG/include/lms7002mNG/: DeviceHandle.h  LMS7002M.h  Logger.h  SDRDescriptor.h  StreamComposite.h  StreamConfig.h  types.h
software/lms7002mNG/src/: LMS7002M.cpp  LMS7002M_BaseCalibrations.cpp  LMS7002M_RegistersMap.cpp  LMS7002M_RxTxCalibrations.cpp  LMS7002M_filtersCalibration.cpp  LMS7002M_gainCalibrations.cpp  LMS7002M_parameters.cpp  LMS7002M_validation.cpp  MCU_BD.cpp  MCU_File.cpp  MCU_File.h
software/lms7002mNG/src/utilities/: rfTest.cpp  toString.h
software/patches_LMS7002M-driver/: 0001-try_adapt_SXR_configuration_from_limesuite.patch
software/scripts/: multi_prog.sh
software/soapy_sdr/: LiteXXTRXDevice.cpp  LiteXXTRXDevice.hpp  LiteXXTRXRegistration.cpp  LiteXXTRXStreaming.cpp  LiteXXTRXUtils.cpp
software/soapysdr/: CMakeLists.txt  LiteXXTRXDevice.cpp  LiteXXTRXDevice.hpp  LiteXXTRXRegistration.cpp  LiteXXTRXStreaming.cpp  LiteXXTRXUtils.cpp
software/soapysdr-xtrx/: CMakeLists.txt  LiteXXTRXDevice.cpp  LiteXXTRXStreaming.cpp  LiteXXTRXUtils.cpp  Registration.cpp  Streaming.cpp  XTRXDevice.cpp  XTRXDevice.hpp  XTRXUtils.cpp  litepcie_interface.h  main.c
